LuckyStackWorker - RELEASE NOTES
================================
13/08/2023 minor release 4.3.0-beta:
- Realtime function is now off by default
- Apply profile now saves results in a subfolder called 'lsw_<profile>'
- Added histogram window
- Added checkboxes to luminance sharpen to include/exclude specific channels (red, green, blue, color)
- Fixed issue with local contrast causing artefacts under certain conditions in combination with RGB sharpen
- Fixed issue with RGB align causing line artefacts under certain conditions
- Refactored backend java code
- Upgraded java backend to the latest spring boot version, also upgraded other dependencies.

07/05/2023 revision release 4.0.1:
- Fixed ".tiff" not being accepted as valid extension.
- Fixed dispersion correction issue.
- Fixed switching denoise or edge artefact switch off not always switching off.
- Added ".jpeg" as an allowed extension (common on MacOS).

21/04/2023 major release 4.0.0-beta:
- Added new method for removal of the edge ring artefact happening on planet surfaces.
- Added new sliders to control local contrast on fine, medium and large details
- Splitted up the tabs in 3: Sharpen & Denoise, Contrast & Light, Color & Dispersion.
- Added a Dispersion Correction tool.
- Added ability to save individual images in 100% quality JPG format.

11/03/2023 revision release 3.1.1:
- Fixed broken 16-bit PNG file opening
- Fixed issues on MacOS with window focus and minimizing
- Fixed problem on MacOS when closing GUI the image window would not immediately close
- Reduced size of MacOS binary
- Fixed issue with crop size indicator showing when window is de-iconified

04/03/2023 minor release 3.1.0:
- First release of the mac version (both x64 and arm)
- Fixed bugs in file opening (folders with dots were causing problems)
- Fixed db file not overwritten when installing new version
- Fixed UI windown close icon not closing the backend of the app

31/01/2023 major release 3.0.0-beta: